# Tegtory

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Filters.py  LICENSE  README.md  States.py  UserData.py  api.py  bot.py  config.py  filters.py  main.py  mypy.ini  pyproject.toml  pyrogram_main.py  pytest.ini  replys.py  requirements.txt  ruff.toml  sinAPI.py  states.py
.github/workflows/: deploy.dev.yml  deploy.yml  python-app.yml  run.tests.yml
MIddleWares/: ChatActionMiddleWare.py  UserMiddleWare.py
common/: exceptions.py  settings.py
db/: Factory.py  Player.py  __init__.py  console.py  leaderboard.py  stock.py
docker/: Dockerfile  docker-compose.dev.yml
domain/: results.py
domain/commands/: __init__.py  base.py  factory.py  user.py
domain/context/: __init__.py  factory.py  holder.py
domain/entities/: __init__.py  association.py  contract.py  factory.py  logistic_company.py  shop.py  user.py
domain/entity/: __init__.py  association.py  factory.py  logistic_company.py  shop.py  user.py
domain/events/: __init__.py  event_types.py  eventbus.py  subscribe.py
domain/interfaces/: __init__.py  base.py  eventbus.py  factory.py  logistic_company.py  product.py  shop.py  storage.py  user.py
domain/queries/: __init__.py  base.py  factory.py  shop.py  user.py
domain/services/: factory.py  money.py  work.py
domain/use_cases/: __init__.py  base.py  factory.py  shop.py  user.py
functions/: lottery.py
globalFunc/: league.py  lottery.py
handlers/: admin.py  change_nick.py  checkUser.py  clanss.py  factory.py  inline_handler.py  leaderboard.py  menu.py  minigames.py  promo.py  ref.py  shop.py  shop_btns.py  start.py  user.py
handlers/city/: __init__.py  donate.py  exchange.py  items.py  leaderboard.py  lottery.py  (+3 more)
infrastructure/: __init__.py  command.py  di.py  executor.py  injectors.py  logger.py  query.py  registry.py  utils.py
middlewares/: ChatActionMiddleWare.py  UserMiddleWare.py
presenters/: __init__.py
tests/: conftest.py  test_start.py  test_user.py
utils/: chat_members.py  leaderboard.py
(+139 files in other folders)
